  Features:
    -
  Changes:
    - Marking recipes as done in the compact subfactory view now grays them out
    - Duplicating a subfactory now inserts it right below the cloned subfactory instead of at the end
    - Improved performance of opening dialogs (thanks curiosity!)
  Bugfixes:
    - Fixed an issue where pasting onto a module could make it exceed the total module capacity of the machine
    - Fixed a very rare issue where the game could desync in multiplayer

---------------------------------------------------------------------------------------------------
Version: 1.1.50
Date: 05. 06. 2022
  Changes:
    - Added a command to restart translation in case it hangs; Type '/fp-restart-translation' into the console to run it
    - Changed it so the selected subfactory is retained during migrations if possible
  Bugfixes:
    - Fixed a few issues and crashes related to editing modules on machines and beacons
    - Fixed a couple of migration issues when trying to load certain old saves
    - Fixed a crash when loading a save where a now invalid subfactory was selected
    - Fixed a crash when trying to put machines into the cursor that can't be blueprinted
    - Fixed a missing locale string

---------------------------------------------------------------------------------------------------
Version: 1.1.49
Date: 27. 05. 2022
  Bugfixes:
    - Changes a keyboard shortcut that was interferring with game functionality
    - Fixed fuel not being shown in the compact view
    - Fixed a few minor UI issues related to the production table
    - Fixed a minor rounding issue with compact view machines
    - Fixed an issue where disabling lines on subfloors wouldn't work
    - Fixed an issue where the module slider wouldn't be properly draggable

---------------------------------------------------------------------------------------------------
Version: 1.1.48
Date: 24. 05. 2022
  Changes: